<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                xmlns:aigestudio="http://schemas.android.com/apk/res-auto"
                android:layout_margin="15dp"
                android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_margin="20dp"
        android:layout_height="wrap_content"> <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="28dp"
        android:id="@+id/first_date_id"
        android:textStyle="bold"
        android:textColor="@color/text_black"
        android:text="@string/second_date_2"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:textColor="@color/text_black"
        android:layout_below="@+id/first_date_id"
        android:text="@string/place1"/></RelativeLayout>

    <LinearLayout
        android:id="@+id/date_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_margin="20dp"
        android:orientation="horizontal"
        >

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:id="@+id/autotext"
            android:hint="@string/info_auto1"
            android:textColor="@color/text_black"
            android:textColorHint="@color/text_black"
            android:padding="10dp"
            android:background="@drawable/rounded_edit_text"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <!--<Button-->
        <!--android:id="@+id/my_rounded_sign_in_button"-->
        <!--android:layout_width="150dp"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:layout_margin="20dp"-->
        <!--android:textColor="@color/white"-->
        <!--android:layout_height="60dp"-->
        <!--android:text="@string/next"-->
        <!--android:background="@drawable/btn_rounded"-->
        <!--android:layout_alignParentRight="true"/>-->
</RelativeLayout>