<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"

    tools:context=".ResultActivity">



    <TextView
        android:id="@+id/tvResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/result"
        android:textColor="@color/text_black"
        android:textStyle="bold"
        android:textSize="30sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tvResult"
        android:layout_margin="15dp"
        android:orientation="vertical"
        >
        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/idPieChart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/tvResult"
            android:layout_margin="15dp"
            android:layout_weight="2"></com.github.mikephil.charting.charts.PieChart>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="horizontal"
            android:weightSum="3">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="match_parent">
            <Button
                android:id="@+id/smileBtn"
                android:layout_width="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_height="wrap_content"
                android:textColor="@color/pos_chart"
                android:textStyle="bold"
                android:background="@drawable/emoji_default"
                android:text="@string/smile_face"/>
            </FrameLayout>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="match_parent">
            <Button
                android:id="@+id/netBtn"
                android:layout_width="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_height="wrap_content"
                android:textColor="@color/neu_chart"
                android:textStyle="bold"
                android:background="@drawable/emoji_default"
                android:text="@string/neu_face"/>
            </FrameLayout>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="match_parent">
            <Button
                android:id="@+id/sadBtn"
                android:layout_width="wrap_content"
                android:textStyle="bold"

                android:textColor="@color/neg_chart"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_height="wrap_content"
                android:background="@drawable/emoji_default"
                android:text="@string/sad_face"/>
        </FrameLayout>
        </LinearLayout>
        <android.support.v4.view.ViewPager
            android:id="@+id/vpPager"
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="50dp"
            android:layout_weight="2">

        </android.support.v4.view.ViewPager>



    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:weightSum="3"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">
        <android.support.design.widget.TabLayout
            android:id="@+id/tabDots"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabBackground="@drawable/tab_selector"
            app:tabGravity="center"
            app:tabTextAppearance="@style/MineCustomTabText"
            android:layout_marginEnd="50dp"
            app:tabIndicatorHeight="0dp"/>

        <Button
            android:id="@+id/buttonNext"
            android:layout_width="match_parent"
            android:layout_weight="2"
            android:layout_marginStart="5dp"

            android:layout_height="60dp"
            android:layout_marginBottom="10dp"
            android:text="@string/next"
            android:textColor="@color/button"
            android:background="@android:color/transparent"
            android:layout_alignParentRight="true"/>
    </LinearLayout>
</RelativeLayout>